Add design Inventures I

--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -3,109 +3,170 @@ layout: default
 title: Inventures I
 ---
 
-<img src='/assets/inventures1.svg' alt='Inventures I logo'/>
 
-<h2>Story and figures</h2>
+<div class='container px2'>
+  <div class='col col-12 center'>
+    <img src='/assets/inventures1.svg' width='40%' alt='Inventures I logo' class='mt4 mb4' />
+  </div>
 
-<p>The fund Inventures was founded in 2011 by Olivier de Duve, who worked in venture capital in Europe and the US. He was working and living abroad and became concerned with youth employment, especially when considering his children’s future. For the next generation to have good jobs in Europe, investment in small companies is crucial. Together with several friends and former colleagues, he founded Inventures and MyMicroInvest to tackle this problem.</p>
+  <h2>Story and figures</h2>
 
-<p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment. Active since 2012, the fund invested in businesses that focused on societal goals including: health, education, environment, well being. The fund is dedicated to early-stage businesses (40%) and growth-stage businesses (60%).</p>
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <p>The fund Inventures was founded in 2011 by Olivier de Duve, who worked in venture capital in Europe and the US. He was working and living abroad and became concerned with youth employment, especially when considering his children’s future. For the next generation to have good jobs in Europe, investment in small companies is crucial. Together with several friends and former colleagues, he founded Inventures and MyMicroInvest to tackle this problem.</p>
+    </div>
 
-<h2>Investment strategy</h2>
+    <div class='col sm-col-6 px2'>
+      <p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment. Active since 2012, the fund invested in businesses that focused on societal goals including: health, education, environment, well being. The fund is dedicated to early-stage businesses (40%) and growth-stage businesses (60%).</p>
+    </div>
+  </div>
 
-<p>Inventures I was designed to improve our world by enabling great entrepreneurs. As a result, the fund focuses on solutions, products or services, that contribute to solving societal problems. Specifically in the following industries: health, education, environment, society, environment and economy.</p>
+  <h2>Investment strategy</h2>
 
-<p><strong>Co-financing with the crowd</strong> – The innovative feature of Inventures is that it includes citizens in a multi-stakeholder partnership, through the crowdfunding platform MyMicroInvest. The crowd reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <p>Inventures I was designed to improve our world by enabling great entrepreneurs. As a result, the fund focuses on solutions, products or services, that contribute to solving societal problems. Specifically in the following industries: health, education, environment, society, environment and economy.</p>
+    </div>
 
-<h2>Investment process</h2>
+    <div class='col sm-col-6 px2'>
+      <p><strong>Co-financing with the crowd</strong> – The innovative feature of Inventures is that it includes citizens in a multi-stakeholder partnership, through the crowdfunding platform MyMicroInvest. The crowd reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
+    </div>
+  </div>
 
-<img src='/assets/investment-process.jpg' alt='Investment process'/>
+  <h2>Investment process</h2>
 
-<h2>Sectors</h2>
+  <div class='col col-12 center'>
+    <img src='/assets/investment-process.jpg' alt='Investment process'/>
+  </div>
 
-<p>We have outlined the following aspects of each industry that are of interest to us:</p>
+  <h2>Sectors</h2>
 
-<h3>Environment and conservation</h3>
+  <p>We have outlined the following aspects of each industry that are of interest to us:</p>
 
-<ul>
-  <li>Reduce energy consumption, and promote green energy production.
-  <li>Enable and spread access to vital resources.
-  <li>Promote green and efficient means of transportation.
-</ul>
+  <div class='sm-col sm-col-4'>
+    <h3>Environment and conservation</h3>
 
-<h3>Health</h3>
+    <ul>
+      <li>Reduce energy consumption, and promote green energy production.
+      <li>Enable and spread access to vital resources.
+      <li>Promote green and efficient means of transportation.
+    </ul>
+  </div>
 
-<ul>
-  <li>A healthy, balanced and environmentally friendly diet.</li>
-  <li>Reducing widespread physical and mental health problems like obesity, anorexia, depression.</li>
-  <li>Enable and grant access to specialised treatment for a larger public.</li>
-</ul>
+  <div class='sm-col sm-col-4'>
+    <h3>Health</h3>
 
-<h3>Education</h3>
+    <ul>
+      <li>A healthy, balanced and environmentally friendly diet.</li>
+      <li>Reducing widespread physical and mental health problems like obesity, anorexia, depression.</li>
+      <li>Enable and grant access to specialised treatment for a larger public.</li>
+    </ul>
+  </div>
 
-<ul>
-  <li>Enable and grant access to smart education.</li>
-  <li>Promote access to communication technologies such as internet and mobile phones.</li>
-</ul>
+  <div class='sm-col sm-col-4'>
+    <h3>Education</h3>
 
-<h3>Society</h3>
+    <ul>
+      <li>Enable and grant access to smart education.</li>
+      <li>Promote access to communication technologies such as internet and mobile phones.</li>
+    </ul>
+  </div>
 
-<ul>
-  <li>Enable and support minority integration.</li>
-  <li>Help the well-being of families.</li>
-</ul>
+  <div class='sm-col sm-col-4'>
+    <h3>Society</h3>
 
-<h3>Economy</h3>
+    <ul>
+      <li>Enable and support minority integration.</li>
+      <li>Help the well-being of families.</li>
+    </ul>
+  </div>
 
-<ul>
-  <li>Promote access for all to transparent financial services.</li>
-  <li>Support a stronger economy and reduce unemployment.</li>
-  <li>Promote the businesses of micro-entrepreneurs.</li>
-</ul>
+  <div class='sm-col sm-col-4'>
+    <h3>Economy</h3>
 
-<h2>Portfolio</h2>
+    <ul>
+      <li>Promote access for all to transparent financial services.</li>
+      <li>Support a stronger economy and reduce unemployment.</li>
+      <li>Promote the businesses of micro-entrepreneurs.</li>
+    </ul>
+  </div>
 
-<img src='/assets/2houses.jpg' alt='2Houses logo'/>
-<p><a href='https://www.2houses.com'>2houses</a> is an online platform offering practical tools, content and advice for separated parents.</p>
+  <h2 class='col col-12'>Portfolio</h2>
 
-<img src='/assets/2observe.jpg' alt='2-Observe logo'/>
-<p><a href='http://www.2-observe.be/'>2-Observe</a> designs, produces and sells medical monitoring systems for breathing.</p>
+  <div class='clearfix mxn2'>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/2houses.jpg' alt='2Houses logo'/>
+      <p><a href='https://www.2houses.com'>2houses</a> is an online platform offering practical tools, content and advice for separated parents.</p>
+    </div>
 
-<img src='/assets/acarup.jpg' alt='2Acar’Up logo'/>
-<p><a href='http://acarup.com/'>Acar’Up</a> developed a new method to eradicate house dust mites, a product which attracts mites and a technical textile which traps the allergenic dust mites.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/2observe.jpg' alt='2-Observe logo'/>
+      <p><a href='http://www.2-observe.be/'>2-Observe</a> designs, produces and sells medical monitoring systems for breathing.</p>
+    </div>
 
-<img src='/assets/aproplan.jpg' alt='AproPLAN logo'/>
-<p><a href='http://www.aproplan.com/'>AproPLAN</a> is construction management software that lets you keep track of your progress & collaborate with your team. Get work done in the office and on-site.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/acarup.jpg' alt='2Acar’Up logo'/>
+      <p><a href='http://acarup.com/'>Acar’Up</a> developed a new method to eradicate house dust mites, a product which attracts mites and a technical textile which traps the allergenic dust mites.</p>
+    </div>
 
-<img src='/assets/auctelia.jpg' alt='Auctelia logo'/>
-<p><a href='https://www.auctelia.com/'>Auctelia</a> is an efficient way to buy and sell used machines and industrial equipment (timber, metal, etc) online through auctions and direct sales.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/aproplan.jpg' alt='AproPLAN logo'/>
+      <p><a href='http://www.aproplan.com/'>AproPLAN</a> is construction management software that lets you keep track of your progress & collaborate with your team. Get work done in the office and on-site.</p>
+    </div>
 
-<img src='/assets/domobios.jpg' alt='Domobios logo'/>
-<p><a href='http://www.domobios.com'>Domobios</a> is specialized in the research and development of sustainable and non-toxic products that eliminate household pests such as mites, bedbugs, lice, fleas, and cockroaches.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/auctelia.jpg' alt='Auctelia logo'/>
+      <p><a href='https://www.auctelia.com/'>Auctelia</a> is an efficient way to buy and sell used machines and industrial equipment (timber, metal, etc) online through auctions and direct sales.</p>
+    </div>
 
-<img src='/assets/domoscio.jpg' alt='Domoscio logo'/>
-<p><a href='https://domoscio.com/'>Domoscio</a> creates adaptive e-learning for better learning and retention by linking cognitive science, big data and artificial intelligence together.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/domobios.jpg' alt='Domobios logo'/>
+      <p><a href='http://www.domobios.com'>Domobios</a> is specialized in the research and development of sustainable and non-toxic products that eliminate household pests such as mites, bedbugs, lice, fleas, and cockroaches.</p>
+    </div>
 
-<img src='/assets/elysia.jpg' alt='Elysia logo'/>
-<p><a href='http://www.elysia.be/'>Elysia</a> provides laboratory information management systems (LIMS), chromatography and quality control systems to the pharmaceutical, agrochemical and nuclear/PET industries. Elysia designs, manufactures, sells and services measurement instruments.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/domoscio.jpg' alt='Domoscio logo'/>
+      <p><a href='https://domoscio.com/'>Domoscio</a> creates adaptive e-learning for better learning and retention by linking cognitive science, big data and artificial intelligence together.</p>
+    </div>
 
-<img src='/assets/fearhunters.jpg' alt='Fear Hunters logo'/>
-<p><a href='http://www.koorachoo.com/'>Fear Hunters</a> (aka KooraChoo + AromaKids) is a solution for parents and children to help them manage their emotions with a plush toy book and essential oil spray.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/elysia.jpg' alt='Elysia logo'/>
+      <p><a href='http://www.elysia.be/'>Elysia</a> provides laboratory information management systems (LIMS), chromatography and quality control systems to the pharmaceutical, agrochemical and nuclear/PET industries. Elysia designs, manufactures, sells and services measurement instruments.</p>
+    </div>
 
-<img src='/assets/oncodna.jpg' alt='OncoDNA logo'/>
-<p><a href='http://www.oncodna.com/'>OncoDNA</a> is a medical diagnosis company with experience in DNA sequencing and diagnostic analyses in oncology.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/fearhunters.jpg' alt='Fear Hunters logo'/>
+      <p><a href='http://www.koorachoo.com/'>Fear Hunters</a> (aka KooraChoo + AromaKids) is a solution for parents and children to help them manage their emotions with a plush toy book and essential oil spray.</p>
+    </div>
 
-<img src='/assets/opinum.jpg' alt='Opinum logo'/>
-<p><a href='https://opinum.com/'>Opinum</a> ias an energy monitoring platform for buildings.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/oncodna.jpg' alt='OncoDNA logo'/>
+      <p><a href='http://www.oncodna.com/'>OncoDNA</a> is a medical diagnosis company with experience in DNA sequencing and diagnostic analyses in oncology.</p>
+    </div>
 
-<img src='/assets/santech.jpg' alt='Santech logo'/>
-<p><a href='https://www.santech.fr/'>Santech</a> specialises in the development and commercialisation in B2B2C sector of a customisable medical platform, specialised in prevention and support.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/opinum.jpg' alt='Opinum logo'/>
+      <p><a href='https://opinum.com/'>Opinum</a> ias an energy monitoring platform for buildings.</p>
+    </div>
 
-<img src='/assets/ssx.jpg' alt='Social Stock Exchange logo'/>
-<p><a href='http://www.socialstockexchange.com/'>Social Stock Exchange</a> is a fully regulated market place designed to improve access to capital for social impact businesses by connecting them with impact investors.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/santech.jpg' alt='Santech logo'/>
+      <p><a href='https://www.santech.fr/'>Santech</a> specialises in the development and commercialisation in B2B2C sector of a customisable medical platform, specialised in prevention and support.</p>
+    </div>
 
-<img src='/assets/youscribe.jpg' alt='YouScribe logo'/>
-<p><a href='https://www.youscribe.com/'>YouScribe</a> is an online platform for selling digital books.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/ssx.jpg' alt='Social Stock Exchange logo'/>
+      <p><a href='http://www.socialstockexchange.com/'>Social Stock Exchange</a> is a fully regulated market place designed to improve access to capital for social impact businesses by connecting them with impact investors.</p>
+    </div>
 
-<img src='/assets/zencar.jpg' alt='ZenCar logo'/>
-<p><a href='https://www.zencar.eu/'>Zen Car</a> is a Belgian car sharing service of 100% electric vehicle fleet with dedicated charging stations.</p>
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/youscribe.jpg' alt='YouScribe logo'/>
+      <p><a href='https://www.youscribe.com/'>YouScribe</a> is an online platform for selling digital books.</p>
+    </div>
+
+    <div class='sm-col sm-col-4 px2'>
+      <img src='/assets/zencar.jpg' alt='ZenCar logo'/>
+      <p><a href='https://www.zencar.eu/'>Zen Car</a> is a Belgian car sharing service of 100% electric vehicle fleet with dedicated charging stations.</p>
+    </div>
+  </div>
+</div>
