Add design Inventures II

--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -3,54 +3,71 @@ layout: default
 title: Inventures II
 ---
 
-<img src='/assets/inventures2.svg' alt='Inventures II logo'/>
-
-<h2>Story</h2>
-
-<p>The challenges of development today underline the shortfall of basic needs affecting millions of people and major critical environmental issues.</p>
-
-<p>Governments have adopted policies and frameworks to incentivise the development of sustainable businesses all around the world. This has particularly been detailed in the 2016 United Nations Sustainable Development Goals (SDGs).</p>
-
-<p>The SDGs build on the principles of “The Future We Want”, and have been supportive of the often-quoted UN Secretary-General Ban Ki-moon who believes that “we don’t have plan B because there is no planet B”.</p>
-
-<p>The Sustainable Development Goals (SDGs), officially known as Transforming our world: the 2030 Agenda for Sustainable Development is composed of 17 “Global Goals” with 169 specific targets.</p>
-
-<p>Creating the SDGs was a collaborative process involving the 193 UN Member States, as well as global civil society.</p>
-
-<p>The resulting detailed SDGs are a broad intergovernmental agreement that acts as the Post 2015 Development Agenda (successor to the Millennium Development Goals).</p>
-
-<img src='/assets/sustainable-development-goals.jpg' alt='Inventures II logo'/>
-
-<h2>Objectives</h2>
-
-<p>Inventures II SDG Growth aims to invest in <strong>35 promising start-ups and scale-ups with a high growth potential</strong>.</p>
-
-<p>These investments will result in a measurable impact on the SDGs, and lead to the creation of <strong>350 jobs in Europe</strong>, as well as a market-aligned financial result.</p>
-
-<p>Inventures II has a strong focus on 5 SDGs, which are relevant for Europe:</p>
-
-<ul>
-  <li>SDG 3 Good Health & Well Being</li>
-  <li>SDG 4 Quality Education</li>
-  <li>SDG 7 Affordable & Clean Energy</li>
-  <li>SDG 8 Decent Work and Economic Growth</li>
-  <li>SDG 11 Sustainable Cities and Communities</li>
-</ul>
-
-<h2>Co-financing with the crowd</h2>
-
-<p>The innovative feature of Inventures is that it includes citizen in a multi-stakeholder partnership through the crowdfunding platform MyMicroInvest. The crowd reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
-
-<p>Inventures II SDG Growth is open for qualified investors</p>
-
-<p>
-  <a href='Download our teaser'>DOWNLOAD OUR 2-PAGE SUMMARY (PDF)</a>
-</p>
-
-<h2>Portfolio</h2>
-
-<p>To come&hellip;</p>
-
 <hr/>
 
-<p>Intrerested? Find out the <a href='/call-for-investors'>benefits for investors</a> and get in touch with our team.</p>
+<div class='container px2'>
+  <div class='col col-12 center'>
+    <img src='/assets/inventures2.svg' width='40%' alt='Inventures II logo' class='mt3 mb4' />
+  </div>
+
+  <h2>Story</h2>
+
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <p>The challenges of development today underline the shortfall of basic needs affecting millions of people and major critical environmental issues.</p>
+
+      <p>Governments have adopted policies and frameworks to incentivise the development of sustainable businesses all around the world. This has particularly been detailed in the 2016 United Nations Sustainable Development Goals (SDGs).</p>
+
+      <p>The SDGs build on the principles of “The Future We Want”, and have been supportive of the often-quoted UN Secretary-General Ban Ki-moon who believes that “we don’t have plan B because there is no planet B”.</p>
+    </div>
+
+    <div class='col sm-col-6 px2'>
+      <p>The Sustainable Development Goals (SDGs), officially known as Transforming our world: the 2030 Agenda for Sustainable Development is composed of 17 “Global Goals” with 169 specific targets.</p>
+
+      <p>Creating the SDGs was a collaborative process involving the 193 UN Member States, as well as global civil society.</p>
+
+      <p>The resulting detailed SDGs are a broad intergovernmental agreement that acts as the Post 2015 Development Agenda (successor to the Millennium Development Goals).</p>
+    </div>
+  </div>
+
+  <div class='col col-12 center mt2 mb2'>
+    <img src='/assets/sustainable-development-goals.jpg' alt='Inventures II logo'/>
+  </div>
+
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <h2 class='h3 regular'>Objectives</h2>
+      <p>Inventures II SDG Growth aims to invest in <strong>35 promising start-ups and scale-ups with a high growth potential</strong>.</p>
+
+      <p>These investments will result in a measurable impact on the SDGs, and lead to the creation of <strong>350 jobs in Europe</strong>, as well as a market-aligned financial result.</p>
+
+      <p>Inventures II has a strong focus on 5 SDGs, which are relevant for Europe:</p>
+
+      <ul>
+        <li>SDG 3 Good Health & Well Being</li>
+        <li>SDG 4 Quality Education</li>
+        <li>SDG 7 Affordable & Clean Energy</li>
+        <li>SDG 8 Decent Work and Economic Growth</li>
+        <li>SDG 11 Sustainable Cities and Communities</li>
+      </ul>
+    </div>
+    <div class='col sm-col-6 px2'>
+      <h2 class='h3 regular'>Co-financing with the crowd</h2>
+
+      <p>The innovative feature of Inventures is that it includes citizen in a multi-stakeholder partnership through the crowdfunding platform MyMicroInvest. The crowd reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values while also following and promoting the business’ progress.</p>
+
+      <p>Inventures II SDG Growth is open for qualified investors.</p>
+
+      <a href='/assets/Inventures-II-Teaser-April2017.pdf' title='Download our teaser' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>DOWNLOAD OUR 2-PAGE SUMMARY (PDF)</a>
+    </div>
+  </div>
+
+
+  <h2>Portfolio</h2>
+
+  <p class='italic center'>To come&hellip;</p>
+
+  <hr class='mt3 mb3'/>
+
+  <p class='center'>Intrerested? Find out the <a href='/call-for-investors'>benefits for investors</a> and get in touch with our team.</p>
+</div>
