Small design improvements for mobile version

--- a/team-board.html
+++ b/team-board.html
@@ -27,7 +27,7 @@ title: Board & Team
   <p>The Investment Committee includes:</p>
 
   <div class='clearfix mxn2'>
-    <div class='col sm-col-4 px2 bg-athens-gray'>
+    <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
       <h2 class='h4'>Funds management</h2>
       <ul>
         <li>Olivier de Duve</li>
@@ -37,7 +37,7 @@ title: Board & Team
       </ul>
     </div>
 
-    <div class='col sm-col-4 px2 bg-athens-gray'>
+    <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
       <h2 class='h4'>Investors</h2>
       <ul>
         <li>Charles Adriaenssen</li>
@@ -46,7 +46,7 @@ title: Board & Team
       </ul>
     </div>
 
-    <div class='col sm-col-4 px2 bg-athens-gray'>
+    <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
       <h2 class='h4'>Other members</h2>
       <ul>
         <li>Philippe Haspeslagh</li>
