--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -11,19 +11,17 @@ title: Venture Capital Funds
 
 <div class='container px2'>
   <div class='clearfix mxn2 mt4'>
-    <div class='col sm-col-6 px2'>
+    <div class='col sm-col-6 px2 center mb3'>
       <a href='inventures-i'>
         <img src='/assets/inventures1.svg' width='70%' title='Inventures I'/>
       </a>
+      <p class='italic dove-gray'>closed</p>
     </div>
-    <div class='col sm-col-6 px2'>
+    <div class='col sm-col-6 px2 center mb3'>
       <a href='inventures-ii'>
         <img src='/assets/inventures2.svg' width='70%' title='Inventures II'/>
       </a>
+      <p class='italic dove-gray'>raising funds</p>
     </div>
-  </div>
-
-  <div class='sm-col-8 mx-auto mt4'>
-    <img src='/assets/magic5.jpg' title='Magic 5 event @ Ghent'/>
   </div>
 </div>
