--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -6,8 +6,10 @@ title: Inventures I
 <hr/>
 
 <div class='container px2'>
-  <div class='col col-12 center'>
-    <img src='/assets/inventures1.svg' width='40%' alt='Inventures I logo' class='mt3 mb4' />
+  <div class='clearfix mxn2'>
+    <div class='col-8 md-col-4 mx-auto mt3 mb2'>
+      <img src='/assets/inventures1.svg' alt='Inventures I logo'/>
+    </div>
   </div>
 
   <h2>Story and figures</h2>
@@ -170,4 +172,6 @@ title: Inventures I
       <p><a href='https://www.zencar.eu/'>Zen Car</a> is a Belgian car sharing service of 100% electric vehicle fleet with dedicated charging stations.</p>
     </div>
   </div>
+
+  <a href='inventures-ii' class='right'>Discover Inventures II ›</a>
 </div>
