--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -6,8 +6,10 @@ title: Inventures II
 <hr/>
 
 <div class='container px2'>
-  <div class='col col-12 center'>
-    <img src='/assets/inventures2.svg' width='40%' alt='Inventures II logo' class='mt3 mb4' />
+  <div class='clearfix mxn2'>
+    <div class='col-8 md-col-4 mx-auto mt3 mb2'>
+      <img src='/assets/inventures2.svg' alt='Inventures II logo'/>
+    </div>
   </div>
 
   <h2>Story</h2>
