Replace the YouTube embed with a static image
The tracking, my god, such tracking. I can't take it it no more. Mkay,
embedding a YouTube iFrame (even with the nocookie domain) adds 10 extra
requests to the page. No need those!

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@ title: Inventures
     {% include key-figures.html %}
   </div>
 
-  <div class='sm-col-8 mx-auto'>
-    {% include magic5-video.html %}
+  <div class='sm-col-8 mx-auto center'>
+    <a href='https://www.youtube.com/watch?v=HeF_6vktHq0' title='Watch on YouTube'>
+      <img src='/assets/magic5.png' alt='Magic 5 @ YouTube'/>
+    </a>
+    <p class='italic h5'>Inventures presented by Ines Mertens and Olivier De Duve during the Magic 5 live event Ghent, Belgium (November 2016)</p>
   </div>
 
   <h3 class='col col-12'>Our investment strategy</h3>
