Fix broken Inventures II link

--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -173,5 +173,5 @@ title: Inventures I
     </div>
   </div>
 
-  <a href='inventures-ii' class='right'>Discover Inventures II ›</a>
+  <a href='../inventures-ii' class='right'>Discover Inventures II ›</a>
 </div>
