Fix broken link on homepage

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ title: Inventures
 
       <p>Are you interested in joining Inventures II as an investor?</p>
 
-      <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/for-investors'>benefits</a> and contact us.</p>
+      <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/call-for-investors'>benefits</a> and contact us.</p>
 
       <a href='/call-for-investors' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
     </div>
