Add meta descriptions for each page

--- a/call-for-projects.html
+++ b/call-for-projects.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Call For Projects
+description: Inventures is the first European crowd-venturing impact fund looking for projects to invest in.
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/solar.jpg); background-size: cover'>
