--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Venture Capital Funds
+description: "Inventures manages two different funds: Inventures I & II"
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
