--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 layout: default
 title: 404 Not Found
 permalink: /404.html
+description: Oops, we can’t seem to find this page.
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
@@ -12,5 +13,5 @@ permalink: /404.html
 
 <div class='container px2 mt4'>
   <h1>Oops!</h1>
-  <p>We can't seem to find the page you're looking for.</p>
+  <p>We can't seem to find the page you’re looking for.</p>
 </div>
