--- a/call-for-investors.html
+++ b/call-for-investors.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Call For Investors
+description: Inventures is the first European crowd-venturing impact fund and we still have room for investors.
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/desert.jpg); background-size: cover'>
