--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Legal Disclaimer
+description: Specifies the scope of rights that may be exercised by this website.
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
