--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Inventures
+description: Inventures is the first European crowd-venturing impact fund, a venture capital firm based in Brussels, Belgium, investing in early stage impact businesses.
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
