--- a/team-board.html
+++ b/team-board.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Board & Team
+description: Bio’s for our board and teammembers.
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/mountains.jpg); background-size: cover'>
