Add tailing slashes to internal URLs

--- a/call-for-projects.html
+++ b/call-for-projects.html
@@ -20,7 +20,7 @@ description: Inventures is the first European crowd-venturing impact fund lookin
     </div>
 
     <div class='sm-col sm-col-6 px2'>
-      <p><strong>Inventures is working in partnership with <a href='https://www.mymicroinvest.com'>MyMicroInvest</a></strong>, a leading investment platform, on various projects reflecting its vision and mission.</p>
+      <p><strong>Inventures is working in partnership with <a href='https://www.mymicroinvest.com/'>MyMicroInvest</a></strong>, a leading investment platform, on various projects reflecting its vision and mission.</p>
       <p>As we are passionate about helping young companies grow, prosper and succeed, <strong>we’re actively looking for disruptive start-ups and scale-ups to invest minimum of €250,000 and up to €1,000,000 in</strong>.</p>
       <p>It could be as simple as filling out our online application form.</p>
     </div>
