--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -13,13 +13,13 @@ description: "Inventures manages two different funds: Inventures I & II"
 <div class='container px2'>
   <div class='clearfix mxn2 mt4'>
     <div class='col sm-col-6 px2 center mb3'>
-      <a href='inventures-i' title='Inventures I'>
+      <a href='inventures-i/' title='Inventures I'>
         <img src='/assets/inventures1.svg' width='70%' alt='Inventures 1'/>
       </a>
       <p class='italic dove-gray'>closed</p>
     </div>
     <div class='col sm-col-6 px2 center mb3'>
-      <a href='inventures-ii' title='Inventures II'>
+      <a href='inventures-ii/' title='Inventures II'>
         <img src='/assets/inventures2.svg' width='70%' alt='Inventures 2'/>
       </a>
       <p class='italic dove-gray'>raising funds</p>
