--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -100,7 +100,7 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-4 px2'>
       <img src='/assets/2houses.jpg' alt='2Houses logo'/>
-      <p><a href='https://www.2houses.com'>2houses</a> is an online platform offering practical tools, content and advice for separated parents.</p>
+      <p><a href='https://www.2houses.com/'>2houses</a> is an online platform offering practical tools, content and advice for separated parents.</p>
     </div>
 
     <div class='sm-col sm-col-4 px2'>
@@ -125,7 +125,7 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
 
     <div class='sm-col sm-col-4 px2'>
       <img src='/assets/domobios.jpg' alt='Domobios logo'/>
-      <p><a href='http://www.domobios.com'>Domobios</a> is specialized in the research and development of sustainable and non-toxic products that eliminate household pests such as mites, bedbugs, lice, fleas, and cockroaches.</p>
+      <p><a href='http://www.domobios.com/'>Domobios</a> is specialized in the research and development of sustainable and non-toxic products that eliminate household pests such as mites, bedbugs, lice, fleas, and cockroaches.</p>
     </div>
 
     <div class='sm-col sm-col-4 px2'>
@@ -174,5 +174,5 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
     </div>
   </div>
 
-  <a href='../inventures-ii' class='right'>Discover Inventures II ›</a>
+  <a href='../inventures-ii/' class='right'>Discover Inventures II ›</a>
 </div>
