--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
     <p>Inventures is a European venture capital fund that builds a better world through a portfolio of investments in sustainable businesses.</p>
 
-    <p>The firm has two funds: <a href='venture-capital-funds/inventures-i'>Inventures I</a> & <a href='venture-capital-funds/inventures-ii'>Inventures II</a>.</p>
+    <p>The firm has two funds: <a href='venture-capital-funds/inventures-i/'>Inventures I</a> & <a href='venture-capital-funds/inventures-ii/'>Inventures II</a>.</p>
 
     <h3>History in brief</h3>
 
@@ -57,7 +57,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
     <p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment.</p>
 
-    <p>See the <a href='/venture-capital-funds/inventures-i'>portfolio here</a>. The fund is now closed to new businesses, but Inventures II is just getting started.</p>
+    <p>See the <a href='/venture-capital-funds/inventures-i/'>portfolio here</a>. The fund is now closed to new businesses, but Inventures II is just getting started.</p>
   </div>
 
   <div class='col sm-col-6 bg-athens-gray p1 mt2 mb2'>
@@ -80,7 +80,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
     </div>
   </div>
 
-  <p class='col col-12 center py3'>Read more about crowdfunding on our platform: <a href='https://www.mymicroinvest.com' title='Investment crowdfunding together with professionals'>MyMicroInvest</a></p>
+  <p class='col col-12 center py3'>Read more about crowdfunding on our platform: <a href='https://www.mymicroinvest.com/' title='Investment crowdfunding together with professionals'>MyMicroInvest</a></p>
 
   <div class='clearfix mxn2'>
     <div class='col sm-col-6 px2'>
@@ -90,9 +90,9 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <p>Are you interested in joining Inventures II as an investor?</p>
 
-      <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/call-for-investors'>benefits</a> and contact us.</p>
+      <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/call-for-investors/'>benefits</a> and contact us.</p>
 
-      <a href='/call-for-investors' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
+      <a href='/call-for-investors/' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
     </div>
 
     <div class='col sm-col-6 px2'>
@@ -100,7 +100,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <h3 class='center regular py1'>Entrepreneur</h3>
 
-      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund and also conducting a crowdfunding campaign? Please fill in an application to raise funds on <a href='https://www.mymicroinvest.com' title='Investment crowdfunding together with professionals'>MyMicroInvest</a> or send us a message to know more.</p>
+      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund and also conducting a crowdfunding campaign? Please fill in an application to raise funds on <a href='https://www.mymicroinvest.com/' title='Investment crowdfunding together with professionals'>MyMicroInvest</a> or send us a message to know more.</p>
 
       <a href='https://www.mymicroinvest.com/raise' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
     </div>
