Rename 'Call for Investors' to 'Get Funded'

--- a/get-funded.html
+++ b/get-funded.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Call For Projects
+title: Get Funded
 description: Inventures is the first European crowd-venturing impact fund looking for projects to invest in.
 ---
 
