Rename 'Call for Investors' to 'Invest'

--- a/invest.html
+++ b/invest.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Call For Investors
+title: Invest
 description: Inventures is the first European crowd-venturing impact fund and we still have room for investors.
 ---
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/desert.jpg); background-size: cover'>
   <div class='container'>
-    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Call For Investors</h1>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Invest</h1>
   </div>
 </div>
 
