--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -72,5 +72,5 @@ description: "Our new fund, Inventures II, open for investors."
 
   <hr class='mt3 mb3'/>
 
-  <p class='center'>Intrerested? Find out the <a href='/call-for-investors'>benefits for investors</a> and get in touch with our team.</p>
+  <p class='center'>Intrerested? Find out the <a href='/invest/'>benefits for investors</a> and get in touch with our team.</p>
 </div>
