--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <p>Are you interested in joining Inventures II as an investor?</p>
 
-      <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/call-for-investors/'>benefits</a> and contact us.</p>
+      <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/invest/'>benefits</a> and contact us.</p>
 
-      <a href='/call-for-investors/' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
+      <a href='/invest/' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
     </div>
 
     <div class='col sm-col-6 px2'>
