Add team photos

--- a/invest.html
+++ b/invest.html
@@ -21,7 +21,7 @@ description: Inventures is the first European crowd-venturing impact fund and we
     </div>
 
     <div class='sm-col sm-col-6 px2'>
-      <img src='/assets/ines.jpg' alt='Ines presenting at the Magic 5 event in Ghent'/>
+      <img src='/assets/ines-presenting.jpg' alt='Ines presenting at the Magic 5 event in Ghent'/>
     </div>
   </div>
 
