--- a/team-board.html
+++ b/team-board.html
@@ -61,59 +61,83 @@ description: Bio’s for our board and teammembers.
 
   <p>Inventures is managed by MyMicroInvest S.A., which is composed of the following team:</p>
 
-  <h3>Olivier de Duve</h3>
-  <p>Chief Executive Officer</p>
+  <div class='clearfix mxn2'>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Olivier de Duve</h3>
+      <p>Chief Executive Officer</p>
+      <img src='/assets/olivier.jpg' alt='Olivier de Duve'/>
+      <p>Olivier has 17 years of experience in investment banking, capital markets and investment management in New York, Paris and London with Bear Stearns, Deutsche Bank, IXIS and Shinsei International.</p>
+      <p>In 2008, he decided to start his own venture with partners. His interest for disruptive technologies led him to become co-founder of Earlytracks S.A. He then launched SemCap, an advisory boutique focused on start-ups and SMEs.</p>
+      <p>He is also a board member and private investor in various start-ups and is active in the Steering Committee of the “de Duve Institute”, a multidisciplinary biomedical research institute.</p>
+      <p>He holds a Master of Science in Business engineering degree from the Solvay Business School and is a FSA registered investment advisor.</p>
+    </div>
 
-  <p>Olivier has 17 years of experience in investment banking, capital markets and investment management in New York, Paris and London with Bear Stearns, Deutsche Bank, IXIS and Shinsei International.</p>
-  <p>In 2008, he decided to start his own venture with partners. His interest for disruptive technologies led him to become co-founder of Earlytracks S.A. He then launched SemCap, an advisory boutique focused on start-ups and SMEs.</p>
-  <p>He is also a board member and private investor in various start-ups and is active in the Steering Committee of the “de Duve Institute”, a multidisciplinary biomedical research institute.</p>
-  <p>He holds a Master of Science in Business engineering degree from the Solvay Business School and is a FSA registered investment advisor.</p>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Gilles van der Meerschen</h3>
+      <p>Premium Clients</p>
+      <img src='/assets/gilles.jpg' alt='Gilles van der Meerschen'/>
+      <p>For more than 20 years, Gilles has built up a know-how with a strong track record in product marketing, strategic planning, process optimisation and people management. His network extends across all continents giving access to finance in the private company market place, be it hedge funds, high net-worth investors, private equity firms or family offices.</p>
+      <p>Gilles is a board member of several high profile companies.</p>
+      <p>Gilles holds a bachelor degree in Business and Administration and a master degree in Marketing from the European Business School of London. A few years later, he followed the Program for Executive Development (PED) at IMD.</p>
+    </div>
+  </div>
 
-  <h3>Gilles van der Meerschen</h3>
-  <p>Premium Clients</p>
+  <div class='clearfix mxn2'>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Bruno de Radzitzky</h3>
+      <p>Head of Asset Management</p>
+      <img src='/assets/bruno.jpg' alt='Bruno de Radzitzky'/>
+      <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of the Asset Management.</p>
+      <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
+      <p>Bruno holds a Master’s Degree in Laws (Louvain-LN), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
+    </div>
 
-  <p>For more than 20 years, Gilles has built up a know-how with a strong track record in product marketing, strategic planning, process optimisation and people management. His network extends across all continents giving access to finance in the private company market place, be it hedge funds, high net-worth investors, private equity firms or family offices.</p>
-  <p>Gilles is a board member of several high profile companies.</p>
-  <p>Gilles holds a bachelor degree in Business and Administration and a master degree in Marketing from the European Business School of London. A few years later, he followed the Program for Executive Development (PED) at IMD.</p>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Inès Mertens de Wilmars</h3>
+      <p>Investment Manager</p>
+      <img src='/assets/ines.jpg' alt='Inès Mertens de Wilmars'/>
+      <p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
+      <p>In 2006, she moved to California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
+      <p>She holds a Master’s degree in business administration from the University of Louvain-la-Neuve (UCL). She has become a member of the National Association of Certified Valuation Analyst (NACVA) and received the designation of Accredited Valuation Analyst (AVA).</p>
+    </div>
+  </div>
 
-  <h3>Bruno de Radzitzky</h3>
-  <p>Head of Asset Management</p>
+  <div class='clearfix mxn2'>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Philippine du Parc Locmaria</h3>
+      <p>Investment Analyst</p>
+      <img src='/assets/philippine.jpg' alt='Philippine du Parc Locmaria'/>
+      <p>Philippine joined MyMicroInvest in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
+      <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
+    </div>
 
-  <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of the Asset Management.</p>
-  <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
-  <p>Bruno holds a Master’s Degree in Laws (Louvain-LN), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Peter De Decker</h3>
+      <p>Investment Analyst</p>
+      <img src='/assets/peter.jpg' alt='Peter De Decker'/>
+      <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
+      Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
+      <p>Peter passed all three CFA exams.</p>
+    </div>
+  </div>
 
-  <h3>Inès Mertens de Wilmars</h3>
-  <p>Investment Manager</p>
+  <div class='clearfix mxn2'>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Brice Moureau</h3>
+      <p>Investment Analyst</p>
+      <img src='/assets/brice.jpg' alt='Brice Moureau'/>
+      <p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
+      <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech VC fund.</p>
+    </div>
 
-  <p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
-  <p>In 2006, she moved to California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
-  <p>She holds a Master’s degree in business administration from the University of Louvain-la-Neuve (UCL). She has become a member of the National Association of Certified Valuation Analyst (NACVA) and received the designation of Accredited Valuation Analyst (AVA).</p>
-
-  <h3>Philippine du Parc Locmaria</h3>
-  <p>Investment Analyst</p>
-
-  <p>Philippine joined MyMicroInvest in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
-  <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
-
-  <h3>Peter De Decker</h3>
-  <p>Investment Analyst</p>
-
-  <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
-  Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
-  <p>Peter passed all three CFA exams.</p>
-
-  <h3>Brice Moureau</h3>
-  <p>Investment Analyst</p>
-
-  <p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
-  <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech VC fund.</p>
-
-  <h3>Sarah Kawa</h3>
-  <p>Lawyer</p>
-
-  <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined MyMicroInvest in March 2015.</p>
-  <p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
+    <div class='sm-col sm-col-6 px2 py1'>
+      <h3>Sarah Kawa</h3>
+      <p>Lawyer</p>
+      <img src='/assets/sarah.jpg' alt='Sarah Kawa'/>
+      <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined MyMicroInvest in March 2015.</p>
+      <p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
+    </div>
+  </div>
 
   <hr class='mt3 mb3'/>
 
