Fix typo in Bruno's description

--- a/team-board.html
+++ b/team-board.html
@@ -87,7 +87,7 @@ description: Bio’s for our board and teammembers.
       <h3>Bruno de Radzitzky</h3>
       <p>Head of Asset Management</p>
       <img src='/assets/bruno.jpg' alt='Bruno de Radzitzky'/>
-      <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of the Asset Management.</p>
+      <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of Asset Management.</p>
       <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
       <p>Bruno holds a Master’s Degree in Laws (Louvain-LN), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
     </div>
@@ -117,7 +117,7 @@ description: Bio’s for our board and teammembers.
       <img src='/assets/peter.jpg' alt='Peter De Decker'/>
       <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
       Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
-      <p>Peter passed all three CFA exams.</p>
+      <p>Peter passed all three <abbr title='Chartered Financial Analyst'>CFA</abbr> exams.</p>
     </div>
   </div>
 
@@ -127,7 +127,7 @@ description: Bio’s for our board and teammembers.
       <p>Investment Analyst</p>
       <img src='/assets/brice.jpg' alt='Brice Moureau'/>
       <p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
-      <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech VC fund.</p>
+      <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech <abbr title='Venture Capital'>VC</abbr> fund.</p>
     </div>
 
     <div class='sm-col sm-col-6 px2 py1'>
