Copy updates for Get Funded page

--- a/get-funded.html
+++ b/get-funded.html
@@ -6,23 +6,23 @@ description: Inventures is the first European crowd-venturing impact fund lookin
 
 <div class='px3 py4 bg-cover' style='background-image: url(/assets/solar.jpg); background-size: cover'>
   <div class='container'>
-    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Call For Projects</h1>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Is your business looking for some extra capital, smart money or funds?</h1>
   </div>
 </div>
 
 <div class='container px2 mt3'>
-  <p class='h2 bold py2'>Is your business looking for some extra capital, smart money or funds?</p>
+  <p class='h2 bold py2'>Inventures invest up to €1,000,000 in disruptive start-ups.</p>
 
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2'>
-      <p>Inventures II is a Venture Capital fund aiming for the <strong>€50 Million</strong> mark and investing capital in smart, innovative and sustainable European SMEs.</p>
-      <p>Inventures II is supporting the <strong>United Nations Sustainable Development Goals</strong> (SDGs): it aims to support a responsible and sustainable economy in Europe by empowering entrepreneurship through equity investments, mostly in start-ups and small SMEs as they represent 85% of net job creation.</p>
+      <p>Inventures II is a Venture Capital fund aiming for the <strong>€50 Million</strong> mark and investing capital in smart, innovative and sustainable European scale-ups.</p>
+      <p>Inventures II is supporting the <strong>United Nations Sustainable Development Goals</strong> (SDGs): it aims to support a responsible and sustainable economy in Europe by empowering entrepreneurship through equity investments, mostly in start-ups and scale-ups as they represent 85% of net job creation.</p>
     </div>
 
     <div class='sm-col sm-col-6 px2'>
       <p><strong>Inventures is working in partnership with <a href='https://www.mymicroinvest.com/'>MyMicroInvest</a></strong>, a leading investment platform, on various projects reflecting its vision and mission.</p>
-      <p>As we are passionate about helping young companies grow, prosper and succeed, <strong>we’re actively looking for disruptive start-ups and scale-ups to invest minimum of €250,000 and up to €1,000,000 in</strong>.</p>
-      <p>It could be as simple as filling out our online application form.</p>
+      <p>We are passionate about helping young companies grow, prosper and succeed, If you're looking for growth capital for your impactful business, Inventures invest from <strong>250,000 and up to €1,000,000 in disruptive start-ups and scale-ups</strong>.<p>
+      <p>Get in touch with us: just fill out our online application form.</p>
     </div>
   </div>
 
@@ -92,6 +92,6 @@ description: Inventures is the first European crowd-venturing impact fund lookin
   <p class='center bold mt3 mb3'>Don’t miss out on your chance to become part of an inspiring adventure!</p>
 
   <p class='center'>
-    <a href='https://www.mymicroinvest.com/financings/new' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
+    <a href='https://www.mymicroinvest.com/financings/new' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>FILL IN OUR ONLINE APPLICATION</a>
   </p>
 </div>
